# ent/ogent/oas_server_gen.go
@@ -8,6 +8,10 @@ import (
 
 // Handler handles operations described by OpenAPI v3 specification.
 type Handler interface {
+	// AddUser implements addUser operation.
+	//
+	// PATCH /organizations/{id}/addUser
+	AddUser(ctx context.Context, params AddUserParams) (AddUserOK, error)
 	// CreateOrganization implements createOrganization operation.
 	//
 	// Creates a new Organization and persists it to storage.
